package usecase

import (
	"log"

	walletRequest "github.com/LavaJover/shvark-order-service/internal/delivery/http/dto/wallet/request"
	"github.com/LavaJover/shvark-order-service/internal/delivery/http/handlers"
	"github.com/LavaJover/shvark-order-service/internal/domain"
	"github.com/LavaJover/shvark-order-service/internal/infrastructure/bitwire/notifier"
	"github.com/LavaJover/shvark-order-service/internal/infrastructure/kafka"
	"google.golang.org/grpc/codes"
	"google.golang.org/grpc/status"
)

type DefaultDisputeUsecase struct {
	disputeRepo domain.DisputeRepository
	walletHandler *handlers.HTTPWalletHandler
	orderRepo domain.OrderRepository
	trafficRepo domain.TrafficRepository
	kafkaPublisher *kafka.KafkaPublisher
	teamRelationsUsecase TeamRelationsUsecase
}

func NewDefaultDisputeUsecase(
	disputeRepo domain.DisputeRepository,
	walletHandler *handlers.HTTPWalletHandler,
	orderRepo domain.OrderRepository,
	trafficRepo domain.TrafficRepository,
	kafkaPublisher *kafka.KafkaPublisher,
	teamRelationsUsecase TeamRelationsUsecase,
	) *DefaultDisputeUsecase {
	return &DefaultDisputeUsecase{
		disputeRepo: disputeRepo,
		walletHandler: walletHandler,
		orderRepo: orderRepo,
		trafficRepo: trafficRepo,
		kafkaPublisher: kafkaPublisher,
		teamRelationsUsecase: teamRelationsUsecase,
	}
}

// –î–∏—Å–ø—É—Ç –æ—Ç–∫—Ä—ã—Ç -> –∑–∞–ø–∏—Å—å –≤ –ë–î —Å–æ —Å—Ç–∞—Ç—É—Å–æ–º DISPUTE_OPENED
// AutoAcceptAt -> –≤ –¥–∞–Ω–Ω–æ–µ –≤—Ä–µ–º—è —Å–∏—Å—Ç–µ–º–∞ –∞–≤—Ç–æ–º–∞—Ç–∏—á–µ—Å–∫–∏ –æ–¥–æ–±—Ä–∏—Ç –¥–∏—Å–ø—É—Ç
func (disputeUc *DefaultDisputeUsecase) CreateDispute(dispute *domain.Dispute) error {
	order, err := disputeUc.orderRepo.GetOrderByID(dispute.OrderID)
	if err != nil {
		return err
	}
	// –ï—Å–ª–∏ —Å–¥–µ–ª–∫–∞ –Ω–µ —É—à–ª–∞ –≤ –æ—Ç–º–µ–Ω—É, —Ç–æ –¥–∏—Å–ø—É—Ç –Ω–µ –æ—Ç–∫—Ä—ã—Ç—å
	if order.Status != domain.StatusCanceled {
		return status.Error(codes.FailedPrecondition, "order is not even canceled")
	}
	dispute.DisputeCryptoRate = order.CryptoRubRate
	dispute.DisputeAmountCrypto = dispute.DisputeAmountFiat / dispute.DisputeCryptoRate
	err = disputeUc.disputeRepo.CreateDispute(dispute)
	if err != nil {
		return err
	}
	disputeUc.kafkaPublisher.PublishDispute(kafka.DisputeEvent{
		DisputeID: dispute.ID,
		OrderID: dispute.OrderID,
		TraderID: order.BankDetail.TraderID,
		OrderAmountFiat: order.AmountFiat,
		DisputeAmountFiat: dispute.DisputeAmountFiat,
		ProofUrl: dispute.ProofUrl,
		Reason: dispute.Reason,
		Status: "üÜò–û—Ç–∫—Ä—ã—Ç –¥–∏—Å–ø—É—Ç",
		BankName: order.BankDetail.BankName,
		Phone: order.BankDetail.Phone,
		CardNumber: order.BankDetail.CardNumber,
		Owner: order.BankDetail.Owner,
	})
	err = disputeUc.walletHandler.Freeze(order.BankDetail.TraderID, dispute.OrderID, dispute.DisputeAmountCrypto)
	if err != nil {
		return status.Error(codes.Internal, err.Error())
	}
	err = disputeUc.orderRepo.UpdateOrderStatus(order.ID, domain.OrderStatus(domain.DisputeOpened))
	if err != nil {
		return err
	}
	if order.CallbackURL != "" {
		notifier.SendCallback(
			order.CallbackURL,
			order.MerchantOrderID,
			string(domain.StatusDisputeCreated),
			0, 0, 0,
		)
	}
	return nil
}

func (disputeUc *DefaultDisputeUsecase) AcceptDispute(disputeID string) error {
	err :=  disputeUc.disputeRepo.UpdateDisputeStatus(disputeID, domain.DisputeAccepted)
	if err != nil {
		return err
	}
	dispute, err := disputeUc.disputeRepo.GetDisputeByID(disputeID)
	if err != nil {
		return err
	}
	order, err := disputeUc.orderRepo.GetOrderByID(dispute.OrderID)
	if err != nil {
		return err
	}
	traffic, err := disputeUc.trafficRepo.GetTrafficByTraderMerchant(order.BankDetail.TraderID, order.MerchantID)
	if err != nil {
		return err
	}
	// Search for team relations to find commission users
	var commissionUsers []walletRequest.CommissionUser
	teamRelations, err := disputeUc.teamRelationsUsecase.GetRelationshipsByTraderID(order.BankDetail.TraderID)
	if err == nil {
		for _, teamRelation := range teamRelations {
			commissionUsers = append(commissionUsers, walletRequest.CommissionUser{
				UserID: teamRelation.TeamLeadID,
				Commission: teamRelation.TeamRelationshipRapams.Commission,
			})
		}
	}
	releaseRequest := walletRequest.ReleaseRequest{
		TraderID: order.BankDetail.TraderID,
		MerchantID: order.MerchantID,
		OrderID: order.ID,
		RewardPercent: traffic.TraderRewardPercent,
		PlatformFee: traffic.PlatformFee,
		CommissionUsers: commissionUsers,
	}
	err = disputeUc.walletHandler.Release(releaseRequest)
	if err != nil {
		return err
	}
	err = disputeUc.orderRepo.UpdateOrderStatus(order.ID, domain.StatusCompleted)
	if err != nil {
		return err
	}
	if order.CallbackURL != "" {
		notifier.SendCallback(
			order.CallbackURL,
			order.MerchantOrderID,
			string(domain.StatusCompleted),
			dispute.DisputeAmountCrypto, dispute.DisputeAmountFiat, dispute.DisputeCryptoRate,
		)
	}
	return nil
}

func (disputeUc *DefaultDisputeUsecase) RejectDispute(disputeID string) error {
	err :=  disputeUc.disputeRepo.UpdateDisputeStatus(disputeID, domain.DisputeRejected)
	if err != nil {
		return err
	}
	dispute, err := disputeUc.disputeRepo.GetDisputeByID(disputeID)
	if err != nil {
		return err
	}
	order, err := disputeUc.orderRepo.GetOrderByID(dispute.OrderID)
	if err != nil {
		return err
	}
	// Search for team relations to find commission users
	var commissionUsers []walletRequest.CommissionUser
	teamRelations, err := disputeUc.teamRelationsUsecase.GetRelationshipsByTraderID(order.BankDetail.TraderID)
	if err == nil {
		for _, teamRelation := range teamRelations {
			commissionUsers = append(commissionUsers, walletRequest.CommissionUser{
				UserID: teamRelation.TeamLeadID,
				Commission: teamRelation.TeamRelationshipRapams.Commission,
			})
		}
	}
	releaseRequest := walletRequest.ReleaseRequest{
		TraderID: order.BankDetail.TraderID,
		MerchantID: order.MerchantID,
		OrderID: order.ID,
		RewardPercent: 1,
		PlatformFee: 1,
		// CommissionUsers: commissionUsers,
	}
	err = disputeUc.walletHandler.Release(releaseRequest)
	if err != nil {
		return err
	}
	err = disputeUc.orderRepo.UpdateOrderStatus(order.ID, domain.StatusCanceled)
	if err != nil {
		return err
	}
	if order.CallbackURL != "" {
		notifier.SendCallback(
			order.CallbackURL,
			order.MerchantOrderID,
			string(domain.StatusCanceled),
			0, 0, 0,
		)
	}
	return nil
}

func (disputeUc *DefaultDisputeUsecase) FreezeDispute(disputeID string) error {
	dispute, err := disputeUc.disputeRepo.GetDisputeByID(disputeID)
	if err != nil {
		return err
	}
	if dispute.Status != domain.DisputeOpened {
		return status.Error(codes.FailedPrecondition, "dispute is not opened yet")
	}
	err =  disputeUc.disputeRepo.UpdateDisputeStatus(disputeID, domain.DisputeFreezed)
	if err != nil {
		return err
	}
	return nil
}

func (disputeUc *DefaultDisputeUsecase) GetDisputeByID(disputeID string) (*domain.Dispute, error) {
	return disputeUc.disputeRepo.GetDisputeByID(disputeID)
}

func (disputeUc *DefaultDisputeUsecase) GetDisputeByOrderID(orderID string) (*domain.Dispute, error) {
	return disputeUc.disputeRepo.GetDisputeByOrderID(orderID)
}

func (disputeUc *DefaultDisputeUsecase) AcceptExpiredDisputes() error {
	disputes, err := disputeUc.disputeRepo.FindExpiredDisputes()
	if err != nil {
		return err
	}
	for _, dispute := range disputes {
		if err := disputeUc.AcceptDispute(dispute.ID); err != nil {
			log.Printf("failed to accept dispute %s\n", dispute.ID)
			return status.Error(codes.Internal, err.Error())
		}
	} 
	return nil
}

func (disputeUc *DefaultDisputeUsecase) GetOrderDisputes(page, limit int64, status string) ([]*domain.Dispute, int64, error) {
	return disputeUc.disputeRepo.GetOrderDisputes(page, limit, status)
}